--- a/Llama2/requirements.txt
+++ b/Llama2/requirements.txt
@@ -1,13 +1,134 @@
-pandas
-numpy
-scikit-learn
-accelerate
-peft
-bitsandbytes
-transformers
-trl
-huggingface_hub
-datasets
-wandb
-matplotlib
-seaborn
+accelerate==0.26.0
+aiohttp==3.9.1
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.2.0
+appdirs==1.4.4
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+bitsandbytes==0.42.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
+datasets==2.16.1
+debugpy==1.8.0
+decorator==5.1.1
+dill==0.3.7
+distro==1.9.0
+docker-pycreds==0.4.0
+docstring-parser==0.15
+evaluate==0.4.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fastjsonschema==2.19.1
+filelock==3.13.1
+fonttools==4.47.2
+frozenlist==1.4.1
+fsspec==2023.10.0
+gitdb==4.0.11
+GitPython==3.1.41
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+huggingface-hub==0.20.2
+idna==3.6
+import-ipynb==0.1.4
+ipykernel==6.28.0
+ipynb==0.5.1
+ipython==8.20.0
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mpmath==1.3.0
+msgpack==1.0.7
+multidict==6.0.4
+multiprocess==0.70.15
+nbformat==5.9.2
+nest-asyncio==1.5.8
+networkx==3.2.1
+numpy==1.26.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+opencv-python==4.9.0.80
+packaging==23.2
+pandas==2.1.4
+parso==0.8.3
+peft==0.7.1
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.1.0
+prompt-toolkit==3.0.43
+protobuf==4.25.2
+psutil==5.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==14.0.2
+pyarrow-hotfix==0.6
+pydantic==2.5.3
+pydantic_core==2.14.6
+Pygments==2.17.2
+pynvim==0.5.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.32.1
+regex==2023.12.25
+requests==2.31.0
+responses==0.18.0
+rich==13.7.0
+rpds-py==0.16.2
+safetensors==0.4.1
+scikit-learn==1.3.2
+scipy==1.11.4
+sentry-sdk==1.39.2
+setproctitle==1.3.3
+shtab==1.6.5
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+stack-data==0.6.3
+sympy==1.12
+threadpoolctl==3.2.0
+tokenizers==0.15.0
+torch==2.1.2
+tornado==6.4
+tqdm==4.66.1
+traitlets==5.14.1
+transformers==4.36.2
+triton==2.1.0
+trl==0.7.9
+typing_extensions==4.9.0
+tyro==0.6.3
+tzdata==2023.4
+urllib3==2.1.0
+wandb==0.16.2
+wcwidth==0.2.13
+xxhash==3.4.1
+yarl==1.9.4
